# docs/swagger.yaml
@@ -1,6 +1,193 @@
+definitions:
+  define.ProblemBasic:
+    properties:
+      content:
+        description: 问题内容
+        type: string
+      identity:
+        description: 问题表的唯一标识
+        type: string
+      max_mem:
+        description: 最大运行内存
+        type: integer
+      max_runtime:
+        description: 最大运行时长
+        type: integer
+      problem_categories:
+        description: 关联问题分类表
+        items:
+          type: integer
+        type: array
+      test_cases:
+        description: 关联测试用例表
+        items:
+          $ref: '#/definitions/define.TestCase'
+        type: array
+      title:
+        description: 问题标题
+        type: string
+    type: object
+  define.TestCase:
+    properties:
+      input:
+        description: 输入
+        type: string
+      output:
+        description: 输出
+        type: string
+    type: object
 info:
   contact: {}
 paths:
+  /admin/category-create:
+    post:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: parentId
+        in: formData
+        name: parentId
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 分类创建
+      tags:
+      - 管理员私有方法
+  /admin/category-delete:
+    delete:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: identity
+        in: query
+        name: identity
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 分类删除
+      tags:
+      - 管理员私有方法
+  /admin/category-modify:
+    put:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: identity
+        in: formData
+        name: identity
+        required: true
+        type: string
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: parentId
+        in: formData
+        name: parentId
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 分类修改
+      tags:
+      - 管理员私有方法
+  /admin/problem-create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: ProblemBasic
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/define.ProblemBasic'
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 问题创建
+      tags:
+      - 管理员私有方法
+  /admin/problem-modify:
+    put:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: ProblemBasic
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/define.ProblemBasic'
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 问题修改
+      tags:
+      - 管理员私有方法
+  /category-list:
+    get:
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: size
+        in: query
+        name: size
+        type: integer
+      - description: keyword
+        in: query
+        name: keyword
+        type: string
+      - description: category_identity
+        in: query
+        name: category_identity
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 分类列表
+      tags:
+      - 公共方法
   /login:
     post:
       parameters:
@@ -20,51 +207,6 @@ paths:
       summary: 用户登录
       tags:
       - 公共方法
-  /problem-create:
-    post:
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: title
-        in: formData
-        name: title
-        required: true
-        type: string
-      - description: content
-        in: formData
-        name: content
-        required: true
-        type: string
-      - description: max_runtime
-        in: formData
-        name: max_runtime
-        required: true
-        type: string
-      - description: max_mem
-        in: formData
-        name: max_mem
-        required: true
-        type: string
-      - description: category_ids
-        in: formData
-        name: category_ids
-        type: array
-      - description: test_case
-        in: formData
-        name: test_case
-        required: true
-        type: array
-      responses:
-        "200":
-          description: '{"code":"200","data":""}'
-          schema:
-            type: string
-      summary: 问题创建
-      tags:
-      - 管理员私有方法
   /problem-detail:
     get:
       parameters:
