# router/app.go
@@ -36,8 +36,26 @@ func Router() *gin.Engine {
 	r.GET("/rank-list", service.GetRankList)
 	// 提交记录
 	r.GET("/submit-list", service.GetSubmitList)
+	// 分类列表
+	r.GET("/category-list", service.GetCategoryList)
 
 	// 管理员私有方法
-	r.POST("/problem-create", middlewares.AuthAdminCheck(), service.ProblemCreate)
+	authAdmin := r.Group("/admin", middlewares.AuthAdminCheck())
+	//authAdmin := r.Group("/admin")
+	// 问题创建
+	authAdmin.POST("/problem-create", service.ProblemCreate)
+	// 问题修改
+	authAdmin.PUT("/problem-modify", service.ProblemModify)
+	// 分类创建
+	authAdmin.POST("/category-create", service.CategoryCreate)
+	// 分类修改
+	authAdmin.PUT("/category-modify", service.CategoryModify)
+	// 分类删除
+	authAdmin.DELETE("/category-delete", service.CategoryDelete)
+
+	// 用户私有方法
+	authUser := r.Group("/user", middlewares.AuthUserCheck())
+	// 代码提交
+	authUser.POST("/submit", service.Submit)
 	return r
 }
