# service/problem.go
@@ -4,13 +4,12 @@ import (
 	"gin-gorm-oj/define"
 	"gin-gorm-oj/helper"
 	"gin-gorm-oj/models"
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 	"log"
 	"net/http"
 	"strconv"
 	"time"
-
-	"github.com/gin-gonic/gin"
-	"gorm.io/gorm"
 )
 
 // GetProblemList
@@ -97,15 +96,11 @@ func GetProblemDetail(c *gin.Context) {
 // ProblemCreate
 // @Tags 管理员私有方法
 // @Summary 问题创建
-// @Param token header string true "token"
-// @Param title formData string true "title"
-// @Param content formData string true "content"
-// @Param max_runtime formData string true "max_runtime"
-// @Param max_mem formData string true "max_mem"
-// @Param category_ids formData array false "category_ids"
-// @Param test_case formData array true "test_case"
+// @Accept json
+// @Param authorization header string true "authorization"
+// @Param data body define.ProblemBasic true "ProblemBasic"
 // @Success 200 {string} json "{"code":"200","data":""}"
-// @Router /problem-create [post]
+// @Router /admin/problem-create [post]
 func ProblemCreate(c *gin.Context) {
 	in := new(define.ProblemBasic)
 	err := c.ShouldBindJSON(in)
@@ -176,5 +171,108 @@ func ProblemCreate(c *gin.Context) {
 		"data": map[string]interface{}{
 			"identity": data.Identity,
 		},
+	})
+}
+
+// ProblemModify
+// @Tags 管理员私有方法
+// @Summary 问题修改
+// @Param authorization header string true "authorization"
+// @Param data body define.ProblemBasic true "ProblemBasic"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /admin/problem-modify [put]
+func ProblemModify(c *gin.Context) {
+	in := new(define.ProblemBasic)
+	err := c.ShouldBindJSON(in)
+	if err != nil {
+		log.Println("[JsonBind Error] : ", err)
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "参数错误",
+		})
+		return
+	}
+	if in.Identity == "" || in.Title == "" || in.Content == "" || len(in.ProblemCategories) == 0 || len(in.TestCases) == 0 || in.MaxRuntime == 0 || in.MaxMem == 0 {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "参数不能为空",
+		})
+		return
+	}
+
+	if err := models.DB.Transaction(func(tx *gorm.DB) error {
+		// 问题基础信息保存 problem_basic
+		problemBasic := &models.ProblemBasic{
+			Identity:   in.Identity,
+			Title:      in.Title,
+			Content:    in.Content,
+			MaxRuntime: in.MaxRuntime,
+			MaxMem:     in.MaxMem,
+			UpdatedAt:  models.MyTime(time.Now()),
+		}
+		err := tx.Where("identity = ?", in.Identity).Updates(problemBasic).Error
+		if err != nil {
+			return err
+		}
+		// 查询问题详情
+		err = tx.Where("identity = ?", in.Identity).Find(problemBasic).Error
+		if err != nil {
+			return err
+		}
+
+		// 关联问题分类的更新
+		// 1、删除已存在的关联关系
+		err = tx.Where("problem_id = ?", problemBasic.ID).Delete(new(models.ProblemCategory)).Error
+		if err != nil {
+			return err
+		}
+		// 2、新增新的关联关系
+		pcs := make([]*models.ProblemCategory, 0)
+		for _, id := range in.ProblemCategories {
+			pcs = append(pcs, &models.ProblemCategory{
+				ProblemId:  problemBasic.ID,
+				CategoryId: uint(id),
+				CreatedAt:  models.MyTime(time.Now()),
+				UpdatedAt:  models.MyTime(time.Now()),
+			})
+		}
+		err = tx.Create(&pcs).Error
+		if err != nil {
+			return err
+		}
+		// 关联测试案例的更新
+		// 1、删除已存在的关联关系
+		err = tx.Where("problem_identity = ?", in.Identity).Delete(new(models.TestCase)).Error
+		if err != nil {
+			return err
+		}
+		// 2、增加新的关联关系
+		tcs := make([]*models.TestCase, 0)
+		for _, v := range in.TestCases {
+			// 举个例子 {"input":"1 2\n","output":"3\n"}
+			tcs = append(tcs, &models.TestCase{
+				Identity:        helper.GetUUID(),
+				ProblemIdentity: in.Identity,
+				Input:           v.Input,
+				Output:          v.Output,
+				CreatedAt:       models.MyTime(time.Now()),
+				UpdatedAt:       models.MyTime(time.Now()),
+			})
+		}
+		err = tx.Create(tcs).Error
+		if err != nil {
+			return err
+		}
+		return nil
+	}); err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Problem Modify Error:" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"msg":  "问题修改成功",
 	})
 }
